delete: unuse button

--- a/discourse/discourse.html
+++ b/discourse/discourse.html
@@ -45,7 +45,6 @@
     		table.tbl3 tbody tr:hover {
     			background-color: #e5e5e5;
     		}
-    		//
   	</style>
 
     </head>
@@ -68,7 +67,7 @@
         <td valign="bottom" id="tright">
 		<div id="table-right">
 			<img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../others/mail.html">お問い合わせ</a>&nbsp;&nbsp;
-			<img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../staffonly/staffindex.html">運営会ページ</a>
+			<!-- <img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../staffonly/staffindex.html">運営会ページ</a> -->
 		</div>
         </td>
         </tr>
