--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <td valign="bottom" id="tright">
 		<div id="table-right">
 			<img alt="icon" src="img/icon.gif" alt="" />&nbsp;<a href="others/mail.html">お問い合わせ</a>&nbsp;&nbsp;
-			<img alt="icon" src="img/icon.gif" alt="" />&nbsp;<a href="staffonly/staffindex.html">運営専用</a>&nbsp;&nbsp;
-			<img alt="icon" src="img/icon.gif" alt="" />&nbsp;<a href="http://pmseminar.bbs.fc2.com/">運営掲示板</a>
+			<!-- <img alt="icon" src="img/icon.gif" alt="" />&nbsp;<a href="staffonly/staffindex.html">運営専用</a>&nbsp;&nbsp;
+			<img alt="icon" src="img/icon.gif" alt="" />&nbsp;<a href="http://pmseminar.bbs.fc2.com/">運営掲示板</a> -->
 		</div>
         </td>
         </tr>
