--- a/others/link.html
+++ b/others/link.html
@@ -41,7 +41,7 @@
         <td valign="bottom" id="tright">
 		<div id="table-right">
 			<img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../others/mail.html">お問い合わせ</a>&nbsp;&nbsp;
-			<img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../staffonly/staffindex.html">運営会ページ</a>
+			<!-- <img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../staffonly/staffindex.html">運営会ページ</a> -->
 		</div>
         </td>
         </tr>
