--- a/outline/outline.html
+++ b/outline/outline.html
@@ -74,7 +74,7 @@
         <td valign="bottom" id="tright">
 		<div id="table-right">
 			<img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../others/mail.html">お問い合わせ</a>&nbsp;&nbsp;
-			<img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../staffonly/staffindex.html">会員ページ</a>
+			<!-- <img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../staffonly/staffindex.html">会員ページ</a> -->
 		</div>
         </td>
         </tr>
