add: camp23 info

--- a/history.html
+++ b/history.html
@@ -12,6 +12,12 @@
 
 
 	<div id="ui-tab"><!--ui-tab-->
+
+	<h3>2022年</h3>
+	<dl class ="topics">
+		<dt>2022.05.04</dt><dd><a href="camp/camp22.html">第23回合同合宿</a>の詳細を公開。</dd>
+	</dl>
+
 	<h3>2021年</h3>
 	<dl class ="topics">
 		<dt>2021.12.4</dt><dd><a href="camp/camp22.html">第22回合同合宿</a>の詳細を公開。申し込みを開始しました。</dd>
