--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 	<![endif]-->
 
 	<div id="slidr-id2" style="margin:0 0 10px 0;">
-		<a href="camp/camp23.html"><img src="img/2022/camp23/top23_1.jpg" alt="" width="450px"></a>
+		<center><a href="camp/camp23.html"><img src="img/2022/camp23/top23_1.jpg" alt="" width="450px"></a></center>
 	</div>
 
 	<!--a href="camp/camp13.html" data-slidr="two"><img src="img/2015/camp13/announce13.png" alt="" /></a>
