--- a/camp/camp_ad1.html
+++ b/camp/camp_ad1.html
@@ -6,7 +6,7 @@
   <meta http-equiv="content-language" content="ja" />
   <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=yes" />
 
-  <title>数物セミナー 第23回合同合宿</title>
+  <title>数物セミナー 合同合宿Advanced</title>
 
   <!-- [FC2 Analyzer] http://analyzer.fc2.com/  -->
   <!-- <script language="javascript" src="http://analyzer54.fc2.com/ana/processor.php?uid=1676078" type="text/javascript"></script> -->
@@ -118,19 +118,20 @@ zoom: 1;
     <div id="container">
       <div id="contents">
 
-        <center><img src="../img/2022/camp23/top23_2.jpg" width="400px"></center><br>
+        <!-- <center><img src="../img/2022/camp23/top23_2.jpg" width="400px"></center><br> -->
 
-        <h2>第23回　数物セミナー合同合宿</h2>
+        <h2>第1回　数物セミナー合同合宿Advanced</h2>
         <p>
-          2022年8月に数物セミナー合同合宿を開催します。
-          数学・物理に興味のある学部生の交流を目的とし、3泊4日の合宿の中で、リレー式セミナーや夜ゼミを中心とした活動を行います。<br>
-          ここは合同合宿のページです。Advancedは<a href="./camp_ad1.html">こちら</a>
-          過去の合宿の概要と開催報告には上部タブからアクセスできますので、併せて御覧ください。<br><br>
+          2022年8月末に数物セミナー合同合宿Advancedを開催します。<br>
+          本合宿では数学・物理に興味のある院生・学部生の交流を目的とし、
+          2泊3日の合宿の中で、セミナーと夜ゼミを中心とした活動を行います。
+          セミナーにおいては従来の合宿とは異なり，発展的な内容を取り扱うことができます．
         </p>
         <p>
           <font color="red"  background-color:yellow>
-            各リレーセミナー班の分野紹介、難易度、前提知識をまとめた資料を作成しました。リレーセミナー班選択の参考にしてください</font>。<br />
-            ・RS班希望について &#91;<a href="../PDF/camp23_RS.pdf">pdf</a>&#93;
+            各リレーセミナー班の分野紹介、難易度、前提知識をまとめた資料を作成しました。グループセミナー班選択の参考にしてください</font>。
+            <br />
+            <a href="../PDF/camp_Ad1.pdf">pdf</a>&#93;
         </p>
 
 
@@ -140,7 +141,7 @@ zoom: 1;
           <tbody>
             <tr>
               <td>◇期日</td>
-              <td>2022年8月25日(木)～8月28日(日) 3泊4日</td>
+              <td>2022年8月29日(木)～8月31日(日) 3泊4日</td>
             </tr>
             <tr>
               <td>◇開催地</td>
@@ -152,12 +153,16 @@ zoom: 1;
                 <td>JR呉駅</td>
               </tr>
               <tr>
+                <td>◇参加人数</td>
+                <td>70人程度</td>
+              </tr>
+              <tr>
                 <td>◇募集期間</td>
                 <td>2022年5月6日(日)～2022年5月20日(金)</td>
               </tr>
               <tr>
                 <td>◇参加費</td>
-                <td>11,000円<br />
+                <td>9,000円(数物合宿23rdからの参加者は7000円)<br />
                   今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
                   なお、それぞれ会場は同じで日程はかぶっておりませんので、両方参加することも可能です。<br>
                   ※本合宿にかかる費用、その他数物セミナー全体の運営に関わる費用に用いられます。<br />
@@ -167,22 +172,21 @@ zoom: 1;
                 </tr>
                 <tr>
                   <td>◇参加対象</td>
-                  <td>数学・物理に興味のある学部生</td>
+                  <td>数学・物理に興味のある大学院生(Master&Doctor).
+                      数物会員OB,学部生も歓迎.
+                  </td>
                 </tr>
               </tbody>
             </table>
 
           <h6>参加申し込み</h6>
           <p>
-            参加申し込みは<a href="https://forms.gle/ZkWrx2X6eHyZ7ZkKA">こちら</a>からお願いします。<br>
+            参加申し込みは<a href="">こちら</a>からお願いします。<br>
             本合宿に申込みいただき、参加が決定された場合の流れは以下のようになります。<br />
             <ol style="padding-left:50px;">
               <li>
                 応募時に入力いただいたメールアドレスに、参加内定通知メールが届きます。<br />
                 内容をご確認ください。
-              </li>
-              <li>
-                リレー式セミナーの班ごとに、Web上の掲示板で自己紹介、教科書決め、各自の担当範囲の分担を行っていただきます。
               </li>
               <li>
                 それと並行して、所定の口座への参加費用の振り込みを行っていただきます。
@@ -200,25 +204,26 @@ zoom: 1;
 
 
 
-  <h6>リレーセミナー</h6>
+  <h6>グループセミナー</h6>
   <p>
-    合宿中の主な活動の1つが、リレーセミナーです。
-    これは、4人～7人程度の分野別の班に分かれて、各班で教科書を輪読するセミナーです。
-    10時間程度の時間を取り、一人ずつ班員の前で発表を行います。
-    発表内容について班員で議論を行い、理解を深めるといったことも行います。<br /><br />
-
-    班の割り振りは、参加申込フォームの希望アンケートを元に教務局で決定し、参加当選の通知とともにお知らせします。
-    教科書や範囲・細かい進め方等は、後日開設する電子掲示板にて、各班毎に話し合いをして決めていただきます。
-    リレー式セミナーは交流に主眼があり、１つの班に様々な分野、学年の方が入るようにしています。そのため、あまり専門的で高度な内容は取り扱えません。
-    ご自分の専門分野の高度な内容を議論したいという方は夜ゼミの時間等を利用し、
-    リレー式セミナーは普段あまりやらないような分野を選ばれることをお勧めします。<br /><br />
+    合宿中の主な活動の1つが、グループセミナーです。 
+    これは、分野別の班に分かれて、各班で内容を決めて行うセミナーです。
+    9時間程度の時間を取り発表を行います。
+    発表内容について班員で議論を行い、理解を深めるといったことも行います。
+    班の割り振りは、参加申込フォームの希望アンケートを元に教務で決定し、参加当選の通知とともにお知らせします。 その後，当団体から電子掲示板といった話し合う場をご連絡いたします．
+    従来の合宿とは異なり，各自が専門とする分野のオムニバスセミナーなど少し難しい内容を扱うことも班員との相談次第では可能です．
+    <br /><br />
 
     <b>＜リレー式セミナーテーマ候補 数学＞</b><br />
-    代数学入門、数論、可換代数、代数幾何、表現論、圏論/ホモロジー代数、微分幾何、多様体論、代数トポロジー、複素解析、微分方程式論、関数解析
+    表現論・代数幾何・数論・圏論・微分幾何・代数トポロジー・確率論・微分方程式論・関数解析
 
     <br /><br />
     <b>＜リレー式セミナーテーマ候補 物理＞</b><br />
-    解析力学、電磁気学、熱力学、量子力学、統計力学、流体力学、量子情報、固体物理学、場の量子論、一般相対性理論、プラズマ物理学、光学
+    素粒子論・原子核・宇宙論・凝縮系・固体物理・量子情報・統計力学
+    <br><br>
+
+    <b>＜その他＞</b><br>
+    数理物理
   </p>
 
 <table style="margin: 10px 0 25px 36px; border-spacing: 10px 0;">
@@ -252,12 +257,9 @@ zoom: 1;
 
 <h6>夜ゼミ</h6>
 <p>
-  講義室を開放し、各自で自由にポスターセッションや雑談などを行います。
-  例えば、専門的・高度な内容について議論したり、 ホワイトボードを使って問題を出し合い議論したり、
-  スライドを用意して発表を行ったりすることができます。<br />
-
-  特に、ポスターセッションの発表希望者の方は、事前にポスターを用意して持参してください。
-  形式については、ポスターのサンプルがありますので参考にしてください。<br />
+  講義室を開放し、各自で自由にポスターセッションや雑談などを行います。<br>
+  例えば、専門的・高度な内容について議論したり、 ホワイトボードを使って問題を出し合い議論したり、 スライドを用意して発表を行ったりすることができます。<br>
+  特に、ポスターセッションの発表希望者の方は、事前にポスターを用意して持参してください。 
   <a href="http://sdrv.ms/IKoF6Q">サンプルポスター</a>
 </p>
 
