--- a/others/mail.html
+++ b/others/mail.html
@@ -9,8 +9,8 @@
 		<title>数物セミナー お問合せ</title>
 
 		<!-- [FC2 Analyzer] http://analyzer.fc2.com/  -->
-			<script language="javascript" src="http://analyzer54.fc2.com/ana/processor.php?uid=1676078" type="text/javascript"></script>
-			<noscript><div align="right"><img src="http://analyzer54.fc2.com/ana/icon.php?uid=1676078&ref=&href=&wid=0&hei=0&col=0" /></div></noscript>
+			<!-- <script language="javascript" src="http://analyzer54.fc2.com/ana/processor.php?uid=1676078" type="text/javascript"></script> -->
+			<!-- <noscript><div align="right"><img src="http://analyzer54.fc2.com/ana/icon.php?uid=1676078&ref=&href=&wid=0&hei=0&col=0" /></div></noscript> -->
 		<!-- [FC2 Analyzer]  -->
 
 		<link rel="stylesheet" href="../style.css" type="text/css" />
