--- a/camp/camp23.html
+++ b/camp/camp23.html
@@ -158,8 +158,6 @@ zoom: 1;
               <tr>
                 <td>◇参加費</td>
                 <td>11,000円<br />
-                  今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
-                  なお、それぞれ会場は同じで日程はかぶっておりませんので、両方参加することも可能です。<br>
                   ※本合宿にかかる費用、その他数物セミナー全体の運営に関わる費用に用いられます。<br />
                   <!--打ち上げ（任意参加）の費用は含まれておりません。<br />-->
                   また、参加費の一部が実行委員の交通費等に充てられます。<br />
@@ -175,6 +173,19 @@ zoom: 1;
           <h6>参加申し込み</h6>
           <p>
             参加申し込みは<a href="https://forms.gle/ZkWrx2X6eHyZ7ZkKA">こちら</a>からお願いします。<br>
+            今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
+            なお、それぞれ会場は同じで日程はかぶっておりませんので、両方参加することも可能です。<br>
+            <br>
+            <br>
+            【注意1】申し込みが完了するとただちに「申し込み時に入力したPCメールアドレス」宛てに確認のメールが届きますのでご確認ください。<br />
+            【注意2】期間内であれば、申し込み内容の訂正を承ります。<br />
+            【注意3】内定通知を送付した時点では、あくまでも参加仮登録となり、参加費用の振り込みをいただいて初めて本登録となります。
+                    期限までに振り込まれなかった場合、参加取り消しとなる可能性があるので、ご注意ください。<br />
+            【注意4】参加申し込みの際にご入力頂いた個人情報に関しては、数物セミナー幹部と実行委員会内で保管し、本合宿の運営、
+                    また次回以降の合宿の告知、広報のための統計データに用います。<br />
+            【注意5】但し、運営に必要な範囲で、その他の数物セミナーの会員に一部情報の受け渡しを行います。<br />
+            【注意6】本合宿中に発生したトラブルに対し、数物セミナーでは責任を負いかねますので、ご了承ください。<br />
+            <br>
             本合宿に申込みいただき、参加が決定された場合の流れは以下のようになります。<br />
             <ol style="padding-left:50px;">
               <li>
@@ -315,7 +326,7 @@ zoom: 1;
 <h6>運営</h6>
 <p>
   本合宿の運営は、数物セミナーの第23回合同合宿実行委員会を中心に行います。<br /><br />
-  <img src="../img/2022/camp23/member_camp23.png" alt="" width="570px" />
+  <img src="../img/2022/camp23/camp_member23.png" alt="" width="570px" />
 </p>
 
 <br /></div><!-- contents -->
