--- a/camp/camp_ad1.html
+++ b/camp/camp_ad1.html
@@ -179,7 +179,7 @@ zoom: 1;
 
           <h6>参加申し込み</h6>
           <p>
-            参加申し込みは<a href="">こちら</a>からお願いします。<br>
+            参加申し込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLScy3UcdYdNNt-fIDgkSJ0eJfi97VXGrxpmPdvq2FNaVYnQo1g/viewform">こちら</a>からお願いします。<br>
             今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
             なお、それぞれ会場は同じで日程はかぶっておりませんので、両方参加することも可能です。<br>
             <br>
