--- a/others/link.html
+++ b/others/link.html
@@ -41,7 +41,7 @@
         <td valign="bottom" id="tright">
 		<div id="table-right">
 			<img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../others/mail.html">お問い合わせ</a>&nbsp;&nbsp;
-			<!-- <img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../staffonly/staffindex.html">運営会ページ</a> -->
+			<img alt="icon" src="../img/icon.gif" alt="" />&nbsp;<a href="../staffonly/staffindex.html">運営会ページ</a>
 		</div>
         </td>
         </tr>
@@ -102,7 +102,7 @@
 					<br /><a href="http://msstuseminar9.wix.com/seminars-for-uh"><img src="../img/ban/no.png" width="100%" alt="" /></a><br />
 				</td>
 				<td id="cent">
-					<br /><br />
+					<br /><br /><a href="https://sites.google.com/view/rcs-seminar/home"><img src="../img/ban/RCS.jpg" width="100%" alt="" /></a><br /><br />
 				</td>
 				<td>
 					<br /><br />
@@ -114,7 +114,8 @@
 					兵庫県立大学の自主ゼミサークル。主に物理や生物、化学の分野の自主ゼミや勉強会を統一的に運営、斡旋している。また自主ゼミ間の交流会，情報交換会なども企画している。
 				</td>
 				<td>
-					<br /><br />
+					<a href="https://sites.google.com/view/rcs-seminar/home">RCS有志セミナー</a>&nbsp;★<br /><br />
+					立教大学理学部にゆかりのある学生を中心とした、理系有志の集まり。発表者と聴衆が互いに切磋琢磨することを目標に定期的な勉強会を開催しており、理系以外の分野も含めた講演を行っている。立教大学以外の学生や社会人の参加もあり。
 				</td>
 				<td>
 					<br /><br />
