fix: camp date and create: ad2

--- a/history.html
+++ b/history.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
 
   <body>
@@ -16,6 +17,8 @@
 	<h3>2022年</h3>
 	<dl class ="topics">
 		<dt>2022.05.04</dt><dd><a href="camp/camp23.html">第23回合同合宿</a>の詳細を公開。</dd>
+		<dt>2022.12.18</dt><dd><a href="camp/camp24.html">第24回合同合宿</a>の詳細を公開。</dd>
+		<dt>2022.12.18</dt><dd><a href="camp/camp_ad2.html">第2回合同合宿Advanced</a>の詳細を公開。</dd>
 	</dl>
 
 	<h3>2021年</h3>
