--- a/index.html
+++ b/index.html
@@ -103,8 +103,12 @@
 		</div>
 	<![endif]-->
 
-	<div id="slidr-id2" style="margin:0 0 10px 0;">
+	<div id="slidr-id1" style="margin:0 0 10px 0;">
 		<center><a href="camp/camp24.html"><img src="img/2023/camp24/top24-2.png" alt="" width="450px"></a></center>
+	</div>
+
+	<div id="slidr-id2" style="margin:0 0 10px 0;">
+		<center><a href="camp/camp24.html"><img src="img/2023/ad2/camp24_ad2s.png" alt="" width="450px"></a></center>
 	</div>
 
 	<!--a href="camp/camp13.html" data-slidr="two"><img src="img/2015/camp13/announce13.png" alt="" /></a>
