spm25とad3の仮情報を入力した

--- a/history.html
+++ b/history.html
@@ -14,6 +14,11 @@
 
 	<div id="ui-tab"><!--ui-tab-->
 
+    <h3>2023年</h3>
+	<dl class="topics">
+		
+	</dl>
+
 	<h3>2022年</h3>
 	<dl class ="topics">
 		<dt>2022.05.04</dt><dd><a target="_parent" href="camp/camp23.html">第23回合同合宿</a>の詳細を公開。</dd>
