index.htmlとcamp25.htmlを更新

--- a/camp/camp25.html
+++ b/camp/camp25.html
@@ -119,7 +119,7 @@ zoom: 1;
     <div id="container">
       <div id="contents">
 
-        <center><img src="../img/2023/camp24/top24-2.png" width="400px"></center><br>
+        <center><img src="../img/2023/camp25/top25-2.png" width="400px"></center><br>
 
         <h2>第25回　数物セミナー合同合宿</h2>
         <p>
@@ -131,7 +131,7 @@ zoom: 1;
         <p>
           <font color="red"  background-color:yellow>
             各リレーセミナー班の分野紹介、難易度、前提知識をまとめた資料を作成しました。リレーセミナー班選択の参考にしてください</font>。<br />
-            ・RS班希望について &#91;<a href="../PDF/spm24rd_abstract_1.pdf">pdf</a>&#93;
+            ・RS班希望について &#91;<a href="../PDF/spm25th_abstract_1.pdf">pdf</a>&#93;
         </p>
 
 
@@ -154,7 +154,7 @@ zoom: 1;
               </tr>
               <tr>
                 <td>◇募集期間</td>
-                <td>2022年12月3日(土)～12月18日(日)</td>
+                <td>2023年5月29日(土)～6月18日(日)</td>
               </tr>
               <tr>
                 <td>◇参加費</td>
@@ -173,7 +173,7 @@ zoom: 1;
 
           <h6>参加申し込み</h6>
           <p>
-            参加申し込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLScNivMOWmwF4Wzd_Y8TbUnVQ7BfJZcZbcTreCF0ydUjDhde_A/viewform">こちら</a>からお願いします。<br>
+            参加申し込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLSepG7ACxQi01U4MDoF5Xj8orRM4jI0gdyE5HMv5vSF0IturCA/viewform?usp=sf_link">こちら</a>からお願いします。<br>
             今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
             なお、それぞれ会場は同じで日程はかぶっておりませんので、両方参加することも可能です。<br>
             <br>
@@ -226,15 +226,13 @@ zoom: 1;
     リレー式セミナーは普段あまりやらないような分野を選ばれることをお勧めします。<br /><br />
 
     <b>＜リレー式セミナーテーマ候補 数学＞</b><br />
-    複素解析学・微分方程式論・ルベーグ積分・函数解析学・数学基礎論・代数学入門・数論・可換代数・ガロア理論・代数幾何・表現論・圏論・微分幾何・多様体論・トポロジー
+    複素解析学・微分方程式論・函数解析学・確率論・群論・可換代数・ガロア理論・代数幾何・表現論・圏論・整数論・多様体論・微分幾何・代数トポロジー・数学基礎論・数理統計学
 
     <br /><br />
     <b>＜リレー式セミナーテーマ候補 物理＞</b><br />
-    解析力学・電磁気学・熱力学・量子力学・統計力学・流体力学・量子情報・場の量子論・素粒子論・一般相対性理論・光学・生物物理・固体物理学
+    解析力学・電磁気学・量子力学・量子情報・場の量子論・一般相対論・弦理論・熱力学・統計力学・流体力学・物性物理・宇宙物理・生物物理・数理物理
 
     <br /><br />
-    <b>＜リレー式セミナーテーマ候補 その他＞</b><br />
-    数理物理学
   </p>
 
 <table style="margin: 10px 0 25px 36px; border-spacing: 10px 0;">
@@ -330,8 +328,8 @@ zoom: 1;
 
 <h6>運営</h6>
 <p>
-  本合宿の運営は、数物セミナーの第24回合同合宿実行委員会を中心に行います。<br /><br />
-  <img src="../img/2023/camp24/camp24_member.png" alt="" width="570px" />
+  本合宿の運営は、数物セミナーの第25回合同合宿実行委員会を中心に行います。<br /><br />
+  <img src="../img/2023/camp25/camp25_member.png" alt="" width="570px" />
 </p>
 
 <br /></div><!-- contents -->
