--- a/history.html
+++ b/history.html
@@ -16,7 +16,7 @@
 
     <h3>2023年</h3>
 	<dl class="topics">
-		
+		<dt>2023.05.29</dt><dd><a target="_parent" href="camp/camp25.html">第25回合同合宿</a>の詳細を公開。申し込みを開始しました。</dd>
 	</dl>
 
 	<h3>2022年</h3>
