ad2へのリンクを削除、執行部の名簿を更新

--- a/camp/camp25.html
+++ b/camp/camp25.html
@@ -125,7 +125,7 @@ zoom: 1;
         <p>
           2023年8月29日(火)から9月1日(金)に数物セミナー合同合宿を開催します。
           数学・物理に興味のある学部生の交流を目的とし、3泊4日の合宿の中で、リレー式セミナーや夜ゼミを中心とした活動を行います。<br>
-          ここは合同合宿のページです。Advancedは<a href="./camp_ad2.html">こちら</a>
+          ここは合同合宿のページです。<!--Advancedは<a href="./camp_ad2.html">こちら</a>-->
           過去の合宿の概要と開催報告には上部タブからアクセスできますので、併せて御覧ください。<br><br>
         </p>
         <p>
