ad3関連の更新

--- a/camp/camp_ad3.html
+++ b/camp/camp_ad3.html
@@ -119,7 +119,7 @@ zoom: 1;
       <div id="contents">
 
         <!-- <center><img src="../img/2022/camp23/top23_2.jpg" width="400px"></center><br> -->
-        <center><img src="../img/2023/ad2/camp24_ad2.png" width="400px"></center><br>
+        <center><img src="../img/2023/ad3/ad3_banner.png" width="400px"></center><br>
 
         <h2>第3回　数物セミナー合同合宿Advanced</h2>
         <p>
@@ -132,7 +132,7 @@ zoom: 1;
           <font color="red"  background-color:yellow>
             各リレーセミナー班の分野紹介、難易度、前提知識をまとめた資料を作成しました。グループセミナー班選択の参考にしてください</font>。
             <br />
-            <a href="../PDF/Ad2nd.pdf">pdf</a>&#93;
+            <a href="../PDF/Ad3rd.pdf">pdf</a>&#93;
         </p>
 
 
@@ -175,7 +175,7 @@ zoom: 1;
 
           <h6>参加申し込み</h6>
           <p>
-            参加申し込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLSdrcPsMyKktDwPksM2R6roS9GnwXL2IgatWWOonulQ7y_NJ9A/viewform?usp=send_form">こちら</a>からお願いします。<br>
+            参加申し込みは<a href="https://forms.gle/CKPjJ45a7j4DptPG7">こちら</a>からお願いします。<br>
             今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
             なお、それぞれ会場は同じで日程はかぶっておりませんので、両方参加することも可能です。<br>
             <br>
@@ -222,15 +222,15 @@ zoom: 1;
     <br /><br />
 
     <b>＜リレー式セミナーテーマ候補 数学＞</b><br />
-    代数幾何、表現論、数論、代数トポロジー、微分幾何、低次元トポロジー、微分方程式、関数解析/作用素環論、力学系、(多変数)複素解析、圏論、集合論・基礎論
+    代数幾何、表現論、数論、離散数学/組み合わせ論、代数トポロジー、微分幾何、偏微分方程式、関数解析/作用素環論、力学系、複素解析、圏論、基礎論、応用数学
 
     <br /><br />
     <b>＜リレー式セミナーテーマ候補 物理＞</b><br />
-    素粒子論、原子核、宇宙物理、量子情報adv、統計力学adv、凝縮系・固体物理、ソフトマター
+    素粒子論、原子核・ハドロン、重力理論、宇宙物理学、凝縮系固体物理、統計物理学、量子情報理論、数理物理学、化学物理学、地球惑星物理学
     <br><br>
 
-    <b>＜その他＞</b><br>
-    数理物理
+    <!-- <b>＜その他＞</b><br>
+    数理物理 -->
   </p>
 
 <table style="margin: 10px 0 25px 36px; border-spacing: 10px 0;">
@@ -314,8 +314,8 @@ zoom: 1;
 
 <h6>運営</h6>
 <p>
-  本合宿の運営は、数物セミナーの第24回合同合宿実行委員会を中心に行います。<br /><br />
-  <img src="../img/2022/camp_ad1/camp_member_ad1.png" alt="" width="570px" />
+  本合宿の運営は、第3回数物セミナーアドバンスド実行委員会を中心に行います。<br /><br />
+  <img src="../img/2023/ad3/camp_member_ad3.png" alt="" width="570px" />
 </p>
 
 <br /></div><!-- contents -->
