--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 		<center><a href="camp/camp25.html"><img src="img/2023/camp25/top25-2.png" alt="" width="450px"></a></center>
 	</div>
 
-	<!--<div id="slidr-id2" style="margin:0 0 10px 0;">
-		<center><a href="camp/camp_ad2.html"><img src="img/2023/ad2/camp24_ad2.png" alt="" width="450px"></a></center>
-	</div> -->
+	<div id="slidr-id2" style="margin:0 0 10px 0;">
+		<center><a href="camp/camp_ad3.html"><img src="img/2023/ad3/ad3_banner.png" alt="" width="450px"></a></center>
+	</div>
 
 	<!--a href="camp/camp13.html" data-slidr="two"><img src="img/2015/camp13/announce13.png" alt="" /></a>
 	</div>
