--- a/camp/camp_ad3.html
+++ b/camp/camp_ad3.html
@@ -119,7 +119,7 @@ zoom: 1;
       <div id="contents">
 
         <!-- <center><img src="../img/2022/camp23/top23_2.jpg" width="400px"></center><br> -->
-        <center><img src="../img/2023/ad3/ad3_banner.png" width="400px"></center><br>
+        <center><img src="../img/2023/ad3/topad3_2.png" width="400px"></center><br>
 
         <h2>第3回　数物セミナー合同合宿Advanced</h2>
         <p>
