--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	</div>
 
 	<div id="slidr-id2" style="margin:0 0 10px 0;">
-		<center><a href="camp/camp_ad3.html"><img src="img/2023/ad3/ad3_banner.png" alt="" width="450px"></a></center>
+		<center><a href="camp/camp_ad3.html"><img src="img/2023/ad3/topad3_2.png" alt="" width="450px"></a></center>
 	</div>
 
 	<!--a href="camp/camp13.html" data-slidr="two"><img src="img/2015/camp13/announce13.png" alt="" /></a>
