ad2運営更新 表記をAdvancedに統一

--- a/camp/camp_ad2.html
+++ b/camp/camp_ad2.html
@@ -315,8 +315,8 @@ zoom: 1;
 
 <h6>運営</h6>
 <p>
-  本合宿の運営は、数物セミナーの第24回合同合宿実行委員会を中心に行います。<br /><br />
-  <img src="../img/2022/camp_ad1/camp_member_ad1.png" alt="" width="570px" />
+  本合宿の運営は、第2回数物セミナーAdvanced実行委員会を中心に行います。<br /><br />
+  <img src="../img/2023/ad2/camp_member_ad2.png" alt="" width="570px" />
 </p>
 
 <br /></div><!-- contents -->
