--- a/camp/camp_ad3.html
+++ b/camp/camp_ad3.html
@@ -314,7 +314,7 @@ zoom: 1;
 
 <h6>運営</h6>
 <p>
-  本合宿の運営は、第3回数物セミナーアドバンスド実行委員会を中心に行います。<br /><br />
+  本合宿の運営は、第3回数物セミナーAdvanced実行委員会を中心に行います。<br /><br />
   <img src="../img/2023/ad3/camp_member_ad3.png" alt="" width="570px" />
 </p>
 
