--- a/camp/camp.html
+++ b/camp/camp.html
@@ -440,6 +440,45 @@
 					</tbody>
 				</table>
 
+				<h6>数物セミナーAdvanced一覧</h6><br>
+
+				<table class="tbl3">
+					<thead>
+						<tr>
+							<th>回数</th>
+							<th>開催地</th>
+							<th>募集数</th>
+							<th>参加数</th>
+							<th>参加費</th>
+							<th>セミナーテーマ</th>
+							<th>開催報告</th>
+						</tr>
+					</thead>
+					<tbody>
+
+						<tr>
+							<td><a href="camp_ad1">1</a></td>
+							<td>広島(国立江田島青少年交流の家)</td>
+							<td>70</td>
+							<td>-</td>
+							<td>9000</td>
+							<td>表現論・代数幾何・数論・圏論・微分幾何・代数トポロジー・確率論・微分方程式論・関数解析・素粒子論・原子核・宇宙論・凝縮系・固体物理・量子情報・統計力学・数理物理</td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td><a href="camp_ad2">2</a></td>
+							<td>静岡(国立中央青少年交流の家)</td>
+							<td>-</td>
+							<td>-</td>
+							<td>11000</td>
+							<td>代数幾何・表現論・数論・代数トポロジー・微分幾何・低次元トポロジー・微分方程式・関数解析/作用素環論・力学系・(多変数)複素解析・圏論・集合論・基礎論・素粒子論・原子核・宇宙物理・量子情報adv・統計力学adv・凝縮系・固体物理・ソフトマター・数理物理</td>
+							<td></td>
+						</tr>
+
+					</tbody>
+				</table>
+
 				<br />
 			</div><!-- contents -->
 
