ファビコン、spm26、adv4追加

--- a/camp/camp.html
+++ b/camp/camp.html
@@ -436,6 +436,16 @@
 							<td></td>
 						</tr>
 
+						<tr>
+							<td><a href="camp25.html">24</a></td>
+							<td>広島(国立江田島青少年交流の家)</td>
+							<td>-</td>
+							<td>-</td>
+							<td>12000</td>
+							<td>複素解析学・微分方程式論・函数解析学・確率論・群論・可換代数・ガロア理論・代数幾何・表現論・圏論・整数論・多様体論・微分幾何・代数トポロジー・数学基礎論・数理統計学、解析力学・電磁気学・量子力学・量子情報・場の量子論・一般相対論・弦理論・熱力学・統計力学・流体力学・物性物理・宇宙物理・生物物理・数理物理</td>
+							<td></td>
+						</tr>
+
 
 					</tbody>
 				</table>
@@ -473,6 +483,16 @@
 							<td>-</td>
 							<td>11000</td>
 							<td>代数幾何・表現論・数論・代数トポロジー・微分幾何・低次元トポロジー・微分方程式・関数解析/作用素環論・力学系・(多変数)複素解析・圏論・集合論・基礎論・素粒子論・原子核・宇宙物理・量子情報adv・統計力学adv・凝縮系・固体物理・ソフトマター・数理物理</td>
+							<td></td>
+						</tr>
+
+						<tr>
+							<td><a href="camp_ad3">3</a></td>
+							<td>岡山(国立吉備青少年交流の家)</td>
+							<td>-</td>
+							<td>-</td>
+							<td>10000</td>
+							<td>代数幾何、表現論、数論、離散数学/組み合わせ論、代数トポロジー、微分幾何、偏微分方程式、関数解析/作用素環論、力学系、複素解析、圏論、基礎論、応用数学、素粒子論、原子核・ハドロン、重力理論、宇宙物理学、凝縮系固体物理、統計物理学、量子情報理論、数理物理学、化学物理学、地球惑星物理学</td>
 							<td></td>
 						</tr>
 
