--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="style.css" type="text/css" />
 		<link rel="stylesheet" href="src/jq.css"  type="text/css" />
 		<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
 
 		<script src="src/jq.js" type="text/javascript"></script>
 		<script src="src/jqc.js" type="text/javascript"></script>
