談話会情報更新

--- a/discourse/discourse.html
+++ b/discourse/discourse.html
@@ -263,6 +263,11 @@
           <td>2017</td>
     			<td>愛媛大学・北海道大学・慶應義塾大学</td>
         </tr>
+		<tr>
+			<td><a href="2023/discourse2023.html">都立大談話会</a></td>
+			<td>2023</td>
+				  <td>東京都立大学</td>
+		  </tr>
       </tbody>
 		</table>
 </div>
