--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
 			<img src="img/2014/ievernotice.png" alt="" />
 		</div>
 	<![endif]-->
-
+	
 	<div id="slidr-id1" style="margin:0 0 10px 0;">
-		<center><a href="camp/camp25.html"><img src="img/2023/camp25/top25-2.png" alt="" width="450px"></a></center>
+		<center><a href="discourse/2023/discourse2023.html"><img src="img/2023/discourse2023/ver.3-1.png" alt="" width="450px"></a></center>
+	</div>
+	<div id="slidr-id1" style="margin:0 0 10px 0;">
+		<center><a href="discourse/2023/discourse2023.html"><img src="img/2023/discourse2023/ver.3-2.png" alt="" width="450px"></a></center>
 	</div>
 
-	<div id="slidr-id2" style="margin:0 0 10px 0;">
-		<center><a href="camp/camp_ad3.html"><img src="img/2023/ad3/topad3_2.png" alt="" width="450px"></a></center>
-	</div>
 
 	<!--a href="camp/camp13.html" data-slidr="two"><img src="img/2015/camp13/announce13.png" alt="" /></a>
 	</div>
