--- a/history.html
+++ b/history.html
@@ -16,6 +16,8 @@
 
     <h3>2023年</h3>
 	<dl class="topics">
+		<dt>2023.12.10</dt><dd><a target="_parent" href="camp/camp_ad4.html">第4回Advanced合宿</a>の詳細を公開。申し込みを開始しました。</dd>
+		<dt>2023.12.10</dt><dd><a target="_parent" href="camp/camp26.html">第26回合同合宿</a>の詳細を公開。申し込みを開始しました。</dd>
 		<dt>2023.11.2</dt><dd><a target="_parent" href="discourse/2023/discourse2023.html">都立大談話会</a>の詳細を公開。申し込みを開始しました。</dd>
 		<dt>2023.06.10</dt><dd><a target="_parent" href="camp/camp_ad3.html">第3回数物セミナーアドバンスド</a>の詳細を公開。申し込みを開始しました。</dd>
 		<dt>2023.05.29</dt><dd><a target="_parent" href="camp/camp25.html">第25回合同合宿</a>の詳細を公開。申し込みを開始しました。</dd>
