--- a/camp/camp26.html
+++ b/camp/camp26.html
@@ -329,7 +329,7 @@ zoom: 1;
 <h6>運営</h6>
 <p>
   本合宿の運営は、数物セミナーの第26回合同合宿実行委員会を中心に行います。<br /><br />
-  <!-- <img src="../img/2023/camp25/camp25_member.png" alt="" width="570px" /> -->
+  <img src="../img/2024/camp26/camp26_member.png" alt="" width="500px" />
 </p>
 
 <br /></div><!-- contents -->
