--- a/camp/camp_ad4.html
+++ b/camp/camp_ad4.html
@@ -315,7 +315,7 @@ zoom: 1;
 <h6>運営</h6>
 <p>
   本合宿の運営は、第4回数物セミナーAdvanced実行委員会を中心に行います。<br /><br />
-  <!-- <img src="../img/2023/ad3/camp_member_ad3.png" alt="" width="570px" /> -->
+  <img src="../img/2024/ad4/camp_member_ad4camp.png" alt="" width="570px" />
 </p>
 
 <br /></div><!-- contents -->
