--- a/outline/outline.html
+++ b/outline/outline.html
@@ -431,7 +431,7 @@
 				数物セミナーは、関東と近畿20人以上の学部生によって運営されています。
 				運営会の中心的役割を果たすのが、以下に挙げる役職です：
 				<br /><br />
-		        <img src="members2024.png">
+		        <img src="members_2024.png">
 				<br /><br />
 				上記以外の会員は、各合宿の運営や、談話会の企画、各大学への広報活動などを行っています。
 				また、会員は合同合宿で応募者多数の場合、優先的に参加する事ができます。
