27thの情報を更新

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 	<![endif]-->
 	
 	<div id="slidr-id1" style="margin:0 0 10px 0;">
-		<center><a href="camp/camp26.html"><img src="img/2024/camp26/poster.jpg" alt="" width="450px"></a></center>
+		<center><a href="camp/camp27.html"><img src="img/2024/camp27/Poster-1.png" alt="" width="450px"></a></center>
 	</div>
 	<div id="slidr-id1" style="margin:0 0 10px 0;">
-		<center><a href="camp/camp_ad4.html"><img src="img/2024/ad4/poster.png" alt="" width="450px"></a></center>
+		<center><a href="camp/camp27.html"><img src="img/2024/camp27/Poster-2.png" alt="" width="450px"></a></center>
 	</div>
 
 
