--- a/history.html
+++ b/history.html
@@ -14,6 +14,11 @@
 
 	<div id="ui-tab"><!--ui-tab-->
 
+    <h3>2024年</h3>
+	<dl class="topics">
+        <dt>2024.5.27</dt><dd><a target="_parent" href="camp/camp27.html">第27回合同合宿</a>の詳細を公開。申し込みを開始しました。</dd>
+	</dl>
+	
     <h3>2023年</h3>
 	<dl class="topics">
 		<dt>2023.12.10</dt><dd><a target="_parent" href="camp/camp_ad4.html">第4回Advanced合宿</a>の詳細を公開。申し込みを開始しました。</dd>
