--- a/camp/camp_ad5.html
+++ b/camp/camp_ad5.html
@@ -6,7 +6,7 @@
   <meta http-equiv="content-language" content="ja" />
   <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=yes" />
 
-  <title>数物セミナー 第27回合同合宿</title>
+  <title>数物セミナー 合同合宿Advanced5</title>
 
   <!-- [FC2 Analyzer] http://analyzer.fc2.com/  -->
   <!-- <script language="javascript" src="http://analyzer54.fc2.com/ana/processor.php?uid=1676078" type="text/javascript"></script> -->
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="../style.css" type="text/css" />
   <link rel="stylesheet" href="../src/jq.css"  type="text/css" />
   <link rel="stylesheet" href="../css/lightbox.css"  type="text/css" />
-  <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
 
   <script src="../src/jq.js" type="text/javascript"></script>
   <script src="../src/jqc.js" type="text/javascript"></script>
@@ -119,19 +118,21 @@ zoom: 1;
     <div id="container">
       <div id="contents">
 
-        <center><img src="../img/2024/camp27/Poster-1.png" width="400px"></center><br>
+        <!-- <center><img src="../img/2022/camp23/top23_2.jpg" width="400px"></center><br> -->
+        <center><img src="../img/2024/ad5/poster_adv5th.PNG" width="400px"></center><br>
 
-        <h2>第27回　数物セミナー合同合宿</h2>
+        <h2>第5回　数物セミナー合同合宿Advanced</h2>
         <p>
-          2024年9月15日(日)から9月18日(水)に数物セミナー合同合宿を開催します。
-          数学・物理に興味のある学部生の交流を目的とし、3泊4日の合宿の中で、リレー式セミナーや夜ゼミを中心とした活動を行います。<br>
-           ここは合同合宿のページです。Advancedは<a href="./camp_ad5.html">こちら</a>
-          過去の合宿の概要と開催報告には上部タブからアクセスできますので、併せて御覧ください。<br><br>
+          2024年9月21日(土)から9月23日(月)に数物セミナー合同合宿Advancedを開催します。<br>
+          本合宿では数学・物理に興味のある院生・学部生の交流を目的とし、
+          2泊3日の合宿の中で、セミナーと夜ゼミを中心とした活動を行います。
+          セミナーにおいては従来の合宿とは異なり，発展的な内容を取り扱うことができます．
         </p>
         <p>
           <font color="red"  background-color:yellow>
-            各リレーセミナー班の分野紹介、難易度、前提知識をまとめた資料を作成しました。リレーセミナー班選択の参考にしてください</font>。<br />
-            ・RS班希望について &#91;<a href="https://drive.google.com/file/d/177rT39-sRSp58zp812HR07AmjUBAxAYM/view">pdf</a>&#93;
+            各リレーセミナー班の分野紹介、難易度、前提知識をまとめた資料を作成しました。グループセミナー班選択の参考にしてください</font>。
+            <br />
+            &#91;<a href="../PDF/adv5th.pdf">pdf</a>&#93;
         </p>
 
 
@@ -141,24 +142,24 @@ zoom: 1;
           <tbody>
             <tr>
               <td>◇期日</td>
-              <td>2024年9月15日(日)～9月18日(水) 3泊4日</td>
+              <td>2024年9月21日(土)～9月23日(月) 2泊3日</td>
             </tr>
             <tr>
               <td>◇開催地</td>
               <td><a href="https://bandai.niye.go.jp/">国立磐梯青少年交流の家</a><br />
                 &nbsp;(福島県耶麻郡猪苗代町字五輪原7136-1)</td>
               </tr>
-              <tr>
+              <!-- <tr>
                 <td>◇集合場所</td>
-                <td>JR 郡山駅 西口広場</td>
-              </tr> 
+                <td>岡山駅</td>
+              </tr> -->
               <tr>
-                <td>◇募集期間</td>
-                <td>2024年5月27日(月)～6月9日(日)</td>
+                <td>◇募集締切</td>
+                <td>2024年7月24日(水)</td>
               </tr>
               <tr>
                 <td>◇参加費</td>
-                <td>17,000円<br />
+                <td>16,000円<br />
                   ※本合宿にかかる費用、その他数物セミナー全体の運営に関わる費用に用いられます。<br />
                   <!--打ち上げ（任意参加）の費用は含まれておりません。<br />-->
                   また、参加費の一部が実行委員の交通費等に充てられます。<br />
@@ -166,14 +167,15 @@ zoom: 1;
                 </tr>
                 <tr>
                   <td>◇参加対象</td>
-                  <td>数学・物理に興味のある学部生</td>
+                  <td>数学・物理を専門とする学部生・大学院生・数物OBOG
+                  </td>
                 </tr>
               </tbody>
             </table>
 
           <h6>参加申し込み</h6>
           <p>
-            参加申し込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLScVHJzwAyNxsXZbunAYxRdWeNZzKwS83NUMc8BrByN1cd5UaA/viewform">こちら</a>からお願いします。<br>
+            参加申し込みは<a href="https://forms.gle/349TErfAD4BLq64F7">こちら</a>からお願いします。<br>
             今回は数物セミナー合同合宿と数物セミナーAdvancedの2つの合宿を開催予定です。合同合宿は学部生向け、Advancedは意欲のある学部生・大学院生以上向けの合宿となっております。間違えて目当てではない合宿に応募しないようご注意下さい。
             なお、それぞれ会場は同じで日程はかぶっておりませんので、両方参加することも可能です。<br>
             <br>
@@ -194,9 +196,6 @@ zoom: 1;
                 内容をご確認ください。
               </li>
               <li>
-                リレー式セミナーの班ごとに、Web上の掲示板で自己紹介、教科書決め、各自の担当範囲の分担を行っていただきます。
-              </li>
-              <li>
                 それと並行して、所定の口座への参加費用の振り込みを行っていただきます。
               </li>
               <li>
@@ -212,27 +211,26 @@ zoom: 1;
 
 
 
-  <h6>リレーセミナー</h6>
+  <h6>グループセミナー</h6>
   <p>
-    合宿中の主な活動の1つが、リレーセミナーです。
-    これは、4人～7人程度の分野別の班に分かれて、各班で教科書を輪読するセミナーです。
-    10時間程度の時間を取り、一人ずつ班員の前で発表を行います。
-    発表内容について班員で議論を行い、理解を深めるといったことも行います。<br /><br />
-
-    班の割り振りは、参加申込フォームの希望アンケートを元に教務局で決定し、参加当選の通知とともにお知らせします。
-    教科書や範囲・細かい進め方等は、後日開設する電子掲示板にて、各班毎に話し合いをして決めていただきます。
-    リレー式セミナーは交流に主眼があり、１つの班に様々な分野、学年の方が入るようにしています。そのため、あまり専門的で高度な内容は取り扱えません。
-    ご自分の専門分野の高度な内容を議論したいという方は夜ゼミの時間等を利用し、
-    リレー式セミナーは普段あまりやらないような分野を選ばれることをお勧めします。<br /><br />
+    合宿中の主な活動の1つが、グループセミナーです。 
+    これは、分野別の班に分かれて、各班で内容を決めて行うセミナーです。
+    9時間程度の時間を取り発表を行います。
+    発表内容について班員で議論を行い、理解を深めるといったことも行います。
+    班の割り振りは、参加申込フォームの希望アンケートを元に教務で決定し、参加当選の通知とともにお知らせします。 その後，当団体から電子掲示板といった話し合う場をご連絡いたします．
+    従来の合宿とは異なり，各自が専門とする分野のオムニバスセミナーなど少し難しい内容を扱うことも班員との相談次第では可能です．
+    <br /><br />
 
     <b>＜リレー式セミナーテーマ候補 数学＞</b><br />
-    複素解析学・微分方程式論・函数解析学・確率論・線形代数学・群論・可換代数・ガロア理論・表現論・圏論・整数論・位相空間論・多様体論・曲線曲面論・リーマン幾何学・代数トポロジー・代数幾何・数学基礎論・数理統計学・組み合せ論
+    代数幾何、表現論、数論、離散数学/組み合わせ論、代数トポロジー、微分幾何、低次元トポロジー、偏微分方程式、関数解析/作用素環論、力学系、複素解析、圏論、基礎論、応用数学
 
     <br /><br />
     <b>＜リレー式セミナーテーマ候補 物理＞</b><br />
-    解析力学・電磁気学・量子力学・量子情報・場の量子論・一般相対論・共形場理論・弦理論・熱力学・統計力学・流体力学・物性物理・宇宙物理・生物物理・数理物理
+    素粒子論、統計力学、量子情報、重力理論、数理物理、物性物理、宇宙・地球惑星物理、化学物理学、生物物理
+    <br><br>
 
-    <br /><br />
+    <!-- <b>＜その他＞</b><br>
+    数理物理 -->
   </p>
 
 <table style="margin: 10px 0 25px 36px; border-spacing: 10px 0;">
@@ -266,12 +264,9 @@ zoom: 1;
 
 <h6>夜ゼミ</h6>
 <p>
-  講義室を開放し、各自で自由にポスターセッションや雑談などを行います。
-  例えば、専門的・高度な内容について議論したり、 ホワイトボードを使って問題を出し合い議論したり、
-  スライドを用意して発表を行ったりすることができます。<br />
-
-  特に、ポスターセッションの発表希望者の方は、事前にポスターを用意して持参してください。
-  形式については、ポスターのサンプルがありますので参考にしてください。<br />
+  講義室を開放し、各自で自由にポスターセッションや雑談などを行います。<br>
+  例えば、専門的・高度な内容について議論したり、 ホワイトボードを使って問題を出し合い議論したり、 スライドを用意して発表を行ったりすることができます。<br>
+  特に、ポスターセッションの発表希望者の方は、事前にポスターを用意して持参してください。 
   <a href="http://sdrv.ms/IKoF6Q">サンプルポスター</a>
 </p>
 
@@ -294,15 +289,6 @@ zoom: 1;
     </td>
   </tr>
 </table>
-
-<h6>特別講義</h6>
-<p>
-  特別講義ではリレーセミナーとは別に、大学の講義と同程度の時間・形式で興味の在る分野について有志で発表を行って頂きます。
-  黒板・白板による発表だけでなく、パワーポイントによる発表も可能です。
-  発表希望者は、参加申込時のアンケート中の「特別講演での発表を希望される場合おおまかな内容を記入してください。」
-  という項目に記入してください。発表者はアンケートを元に実行委員会で決定し、参加当選とともに通知します。
-  特別講義の発表者に選ばれなかった場合は、夜ゼミでの発表をお願いしたいと思います。
-</p>
 
 <table style="margin: 10px 0 25px 36px; border-spacing: 10px 0;">
   <tr>
@@ -328,8 +314,8 @@ zoom: 1;
 
 <h6>運営</h6>
 <p>
-  本合宿の運営は、数物セミナーの第27回合同合宿実行委員会を中心に行います。<br /><br />
-  <img src="../img/2024/camp27/camp27_member.png" alt="" width="500px" />
+  本合宿の運営は、第4回数物セミナーAdvanced実行委員会を中心に行います。<br /><br />
+  <img src="../img/2024/ad5/camp_member_ad5camp.png" alt="" width="570px" />
 </p>
 
 <br /></div><!-- contents -->
