談話会更新

--- a/camp/camp.html
+++ b/camp/camp.html
@@ -116,9 +116,9 @@
 						<td id="cent">
 							<b>セミナーのやり方</b>
 						</td>
-						<td>
+						<!-- <td>
 							<b>データベース</b>
-						</td>
+						</td> -->
 					</tr>
 					<tr>
 						<td>
@@ -131,10 +131,10 @@
 							一年生にもわかるように説明します。
 						</td>
 
-						<td>
+						<!-- <td>
 							リレーセミナーテーマ候補となった各分野の概要・教科書レビュー・
 							過去の合宿で使用した教科書の一覧などを公開しています。
-						</td>
+						</td> -->
 					</tr>
 
 					<tr>
@@ -144,9 +144,9 @@
 						<td>
 							<a href="how_to_seminar.html"><img src="../img/detail.png" alt="詳細はこちら" /></a>
 						</td>
-						<td>
-							<a href="http://spm.sub.jp/db/"><img src="../img/detail.png" alt="詳細はこちら" /></a>
-						</td>
+						<!-- <td>
+							<a href="database.html"><img src="../img/detail.png" alt="詳細はこちら" /></a>
+						</td> -->
 					</tr>
 
 				</table>
@@ -444,7 +444,24 @@
 							<td>複素解析学・微分方程式論・函数解析学・確率論・群論・可換代数・ガロア理論・代数幾何・表現論・圏論・整数論・多様体論・微分幾何・代数トポロジー・数学基礎論・数理統計学、解析力学・電磁気学・量子力学・量子情報・場の量子論・一般相対論・弦理論・熱力学・統計力学・流体力学・物性物理・宇宙物理・生物物理・数理物理</td>
 							<td></td>
 						</tr>
-
+						<tr>
+							<td><a href="camp26.html">26</a></td>
+							<td>兵庫(国立淡路青少年交流の家)</td>
+							<td>-</td>
+							<td>-</td>
+							<td>15000</td>
+							<td>微分方程式論・函数解析学・確率論・可換代数・ガロア理論・表現論・整数論・多様体論・曲線曲面論・代数トポロジー・代数幾何学・数学基礎論、解析力学・電磁気学・量子力学・量子情報・場の量子論・一般相対論・熱力学・統計力学・流体力学・物性物理・共形場理論</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><a href="camp27.html">27</a></td>
+							<td>福島(国立磐梯青少年交流の家)</td>
+							<td>-</td>
+							<td>-</td>
+							<td>15000</td>
+							<td>微分方程式論・函数解析学・確率論・群論・可換代数・表現論・圏論・整数論・位相空間論・多様体論・リーマン幾何学・代数トポロジー・数学基礎論・数理統計学・組み合わせ論、解析力学・電磁気学・流体力学・量子力学・量子情報・場の量子論・一般相対論・熱力学・統計力学・物性物理・共形場理論・弦理論</td>
+							<td></td>
+						</tr>
 
 					</tbody>
 				</table>
@@ -466,7 +483,7 @@
 					<tbody>
 
 						<tr>
-							<td><a href="camp_ad1">1</a></td>
+							<td><a href="camp_ad1.html">1</a></td>
 							<td>広島(国立江田島青少年交流の家)</td>
 							<td>70</td>
 							<td>-</td>
@@ -476,7 +493,7 @@
 						</tr>
 
 						<tr>
-							<td><a href="camp_ad2">2</a></td>
+							<td><a href="camp_ad2.html">2</a></td>
 							<td>静岡(国立中央青少年交流の家)</td>
 							<td>-</td>
 							<td>-</td>
@@ -486,12 +503,30 @@
 						</tr>
 
 						<tr>
-							<td><a href="camp_ad3">3</a></td>
+							<td><a href="camp_ad3.html">3</a></td>
 							<td>岡山(国立吉備青少年交流の家)</td>
 							<td>-</td>
 							<td>-</td>
 							<td>10000</td>
 							<td>代数幾何、表現論、数論、離散数学/組み合わせ論、代数トポロジー、微分幾何、偏微分方程式、関数解析/作用素環論、力学系、複素解析、圏論、基礎論、応用数学、素粒子論、原子核・ハドロン、重力理論、宇宙物理学、凝縮系固体物理、統計物理学、量子情報理論、数理物理学、化学物理学、地球惑星物理学</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><a href="camp_ad4.html">4</a></td>
+							<td>兵庫(国立淡路青少年交流の家)</td>
+							<td>-</td>
+							<td>-</td>
+							<td>14000</td>
+							<td>数論、圏論、微分幾何、力学系、離散数学・組み合わせ論、応用数学、物性物理、統計力学、量子情報理論、素粒子理論、重力理論、数理物理学、化学物理学、生物物理学、宇宙・地球惑星物理学</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td><a href="camp_ad5.html">5</a></td>
+							<td>福島(国立磐梯青少年交流の家)</td>
+							<td>-</td>
+							<td>-</td>
+							<td>16000</td>
+							<td>ガロア表現、表現論、圏論、1-圏論、複素解析、確率論、数理統計、AdS/CFT、物性物理、統計力学、天体力学、数理物理学、宇宙・地球惑星物理学</td>
 							<td></td>
 						</tr>
 
