--- a/camp/database.html
+++ b/camp/database.html
@@ -2,11 +2,11 @@
 <html lang="ja" xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja">
 
     <head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta http-equiv="content-language" content="ja" />
 		<meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=yes" />
 		
-		<meta http-equiv="refresh"content="1; url=http://spm.sub.jp/db/">
+		<meta http-equiv="refresh"content="1; url=http://spm.sub.jp/db/"> -->
 
 		<title>数物セミナー リレーセミナーデータベース</title>
 
@@ -119,13 +119,13 @@
         <h2>リレーセミナーデータベース</h2>
 		<p>
 			ここでは、過去のリレーセミナー時に使用した教科書の情報や、
-			リレーセミナーの各分野の概要などのお役立ち情報を公開しています。<br /><br />
-			
+			リレーセミナーの各分野の概要などのお役立ち情報を公開しています。
+			<!-- <br /><br />
 			<span style="color:#ef9f00;font-size:14pt;font-weight:bold;">このページは</span>
 			<a href="http://spm.sub.jp/db/" style="color:#ef9f00;font-size:14pt;font-weight:bold;">こちら</a>
 			<span style="color:#ef9f00;font-size:14pt;font-weight:bold;">に移転しました。<br />
 			自動で新しいデータベースページにジャンプします。</span>
-			<br /><br />
+			<br /><br /> -->
 			
 			※リレーセミナーのテーマとなる分野は、合宿によって異なります。
 			詳しくは<a href="camp.html">合同合宿トップページ</a>などをご覧ください。<br /><br />
@@ -396,7 +396,7 @@
 		</p>
 		<br />
 
-		<h6>教科書レビュー(任意投稿)</h6>
+		<!-- <h6>教科書レビュー(任意投稿)</h6>
 		<p>
 		自由に投稿できる教科書のレビューです。運営委員以外の方でもご自由に投稿いただけます。<br />
 		おすすめの教科書の情報などをどんどん共有していきましょう。<br />
@@ -442,7 +442,7 @@
 		<div class="themes theme34" style="margin-left:10px;">◇<a href="https://docs.google.com/forms/d/1Rq_UnUFmaqRjGNvZWp0lwlNpiJQo2p37ZaNpJYRaO84/viewform">レビューを投稿する</a></div><iframe class="themes theme34" style="margin-left:10px;" width='800' height='300' frameborder='0' src='https://docs.google.com/spreadsheet/pub?key=0ApovAMtyyYALdGlmQkpjV1Z4NUpIeTNGSjJOamxROWc&single=true&gid=0&output=html'></iframe>
 		<div class="themes theme35" style="margin-left:10px;">◇<a href="https://docs.google.com/forms/d/1AqGgy6rBp7r0vhlzo46kU0fZyY6Xa1LvYsO1TYuzUGA/viewform">レビューを投稿する</a></div><iframe class="themes theme35" style="margin-left:10px;" width='800' height='300' frameborder='0' src='https://docs.google.com/spreadsheet/pub?key=0ApovAMtyyYALdEptUnZXMWNIOUdiay1oVVU0ZnRzaUE&single=true&gid=0&output=html'></iframe>
 
-		<br /><br />
+		<br /><br /> -->
 
 		<h6>教科書レビュー(リレーセミナー班長)</h6>
 		<p>
@@ -450,7 +450,7 @@
 		実際にリレーセミナーに使用してみてどのように感じたかといった情報もありますので参考にしてみてください。<br />
 		※分野を選択しても何も表示されない場合は、レビューが存在しません。ご了承ください。
 		</p>
-
+		
 		<table class="themes theme30"><tr><td colspan="2" style="background-color:#333;color:#ddd;">第9回合同合宿</td></tr><tr><td width="200">教科書タイトル</td><td>リー群と表現論</td></tr><tr><td width="200">教科書著者</td><td>小林俊行・大島利雄</td></tr><tr><td width="200">教科書の良い点・悪い点とその理由</td><td>とても広い内容をカバーしているのでいろいろなトピックを選んでセミナーをすることができる、つまり<br />
 		・一つの議論を順に追っていく形<br />
 		・さまざまトピックについて話す形<br />
@@ -559,6 +559,7 @@
 悪い点:初学者には難易度が高い。</td></tr><tr><td width="200">教科書のリレーセミナーに適している点・そうでない点とその理由</td><td>適している点:簡潔に書かれている分解釈などの議論が盛り上がる。
 適していない点:逆に議論が盛り上がり過ぎて時間が足りなくなる。</td></tr><tr><td width="200">教科書をスムーズに読むための前提知識</td><td>数学は基本的な微分がわかれば良い。やさしめな解析力学の本を一読しておくとなお良い。</td></tr><tr><td width="200">班員にその前提知識があったかどうか</td><td>あったと思う。</td></tr></table>
 <table class="themes theme11"><tr><td colspan="2" style="background-color:#333;color:#ddd;">第10回合同合宿</td></tr><tr><td width="200">教科書タイトル</td><td>流体力学</td></tr><tr><td width="200">教科書著者</td><td>今井 功</td></tr><tr><td width="200">教科書の良い点・悪い点とその理由</td><td>色々なトピックが簡潔に書かれているところは良いと思います。しかしこの本だけでは細かい疑問点は解決できないかもしれません。</td></tr><tr><td width="200">教科書のリレーセミナーに適している点・そうでない点とその理由</td><td>細かい点を必要に応じて掘り下げながら議論できるという点でセミナーに適しているかもしれません。</td></tr><tr><td width="200">教科書をスムーズに読むための前提知識</td><td>初等的なベクトル解析・コーシーの積分公式程度までの初等的な複素函数論</td></tr><tr><td width="200">班員にその前提知識があったかどうか</td><td>一年生はベクトル解析等の知識が足りず少し苦労していました。</td></tr></table>
+
 
 
 	
