--- a/discourse/discourse.html
+++ b/discourse/discourse.html
@@ -267,7 +267,12 @@
 			<td><a href="2023/discourse2023.html">都立大談話会</a></td>
 			<td>2023</td>
 				  <td>東京都立大学</td>
-		  </tr>
+		</tr>
+		<tr>
+			<td><a href="2024/discourse2024.html">海洋大談話会</a></td>
+			<td>2024</td>
+				  <td>東京海洋大学</td>
+		</tr>
       </tbody>
 		</table>
 </div>
