--- a/history.html
+++ b/history.html
@@ -16,6 +16,7 @@
 
     <h3>2024年</h3>
 	<dl class="topics">
+		<dt>2024.11.21</dt><dd><a target="_parent" href="discourse/2024/discourse2024.html">海洋大談話会</a>の詳細を公開。</dd>
 		<dt>2024.7.10</dt><dd><a target="_parent" href="camp/camp_ad5.html">第5回Advanced合宿</a>の詳細を公開。申し込みを開始しました。</dd>
         <dt>2024.5.27</dt><dd><a target="_parent" href="camp/camp27.html">第27回合同合宿</a>の詳細を公開。申し込みを開始しました。</dd>
 	</dl>
