--- a/index.html
+++ b/index.html
@@ -105,11 +105,8 @@
 	<![endif]-->
 
 	<div id="slidr-id1" style="margin:0 0 10px 0;">
-		<center><a href="camp/camp_ad5.html"><img src="img/2024/ad5/poster_adv5th.PNG" alt="" width="450px"></a></center>
+		<center><a href="discourse/2024/discourse2024.html"><img src="img/2024/discourse_2024/discourse_2024_1.JPG" alt="" width="450px"></a></center>
 	</div>	
-	<div id="slidr-id1" style="margin:0 0 10px 0;">
-		<center><a href="camp/camp27.html"><img src="img/2024/camp27/Poster-1.png" alt="" width="450px"></a></center>
-	</div>
 
 	<!--a href="camp/camp13.html" data-slidr="two"><img src="img/2015/camp13/announce13.png" alt="" /></a>
 	</div>
