--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	<![endif]-->
 
 	<div id="slidr-id1" style="margin:0 0 10px 0;">
-		<center><a href="discourse/2024/discourse2024.html"><img src="img/2024/discourse_2024/discourse_2024_1.JPG" alt="" width="450px"></a></center>
+		<center><a href="camp/camp28.html"><img src="img/2025/camp28/spm28th_pos.png" alt="" width="450px"></a></center>
 	</div>	
 
 	<!--a href="camp/camp13.html" data-slidr="two"><img src="img/2015/camp13/announce13.png" alt="" /></a>
