--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 	<![endif]-->
 
 	<div id="slidr-id1" style="margin:0 0 10px 0;">
+		<center><a href="camp/camp_ad6.html"><img src="img/2025/camp_adv6/adv6th_pos.png" alt="" width="450px"></a></center>
+	</div>	
+	<div id="slidr-id1" style="margin:0 0 10px 0;">
 		<center><a href="camp/camp28.html"><img src="img/2025/camp28/spm28th_pos.png" alt="" width="450px"></a></center>
 	</div>	
 
