アンケ追加

--- a/camp/camp28.html
+++ b/camp/camp28.html
@@ -264,7 +264,7 @@ zoom: 1;
 </p>
 
 <!-- ↓データベース直したら戻す -->
-<!-- <a href="http://spm.sub.jp/db/"><img src="../img/2014/camp11/semi1.png" width="290" style="float:left;margin:0 10px 0 40px;" /></a> -->
+<a href="database.html"><img src="../img/2014/camp11/semi1.png" width="290" style="float:left;margin:0 10px 0 40px;" /></a>
 <a href="how_to_seminar.html"><img src="../img/2014/camp11/semi2.png" width="290" style="margin:0;" /></a>
 <br /><br />
 
