--- a/camp/camp.html
+++ b/camp/camp.html
@@ -462,6 +462,15 @@
 							<td>微分方程式論・函数解析学・確率論・群論・可換代数・表現論・圏論・整数論・位相空間論・多様体論・リーマン幾何学・代数トポロジー・数学基礎論・数理統計学・組み合わせ論、解析力学・電磁気学・流体力学・量子力学・量子情報・場の量子論・一般相対論・熱力学・統計力学・物性物理・共形場理論・弦理論</td>
 							<td></td>
 						</tr>
+						<tr>
+							<td><a href="camp28.html">28</a></td>
+							<td>静岡(国立中央青少年交流の家)</td>
+							<td>-</td>
+							<td>(参加人数)</td>
+							<td>16,000</td>
+							<td>テーマ</td>
+							<td>開催報告</a></td>
+						</tr>
 
 					</tbody>
 				</table>
@@ -528,6 +537,15 @@
 							<td>16000</td>
 							<td>ガロア表現、表現論、圏論、1-圏論、複素解析、確率論、数理統計、AdS/CFT、物性物理、統計力学、天体力学、数理物理学、宇宙・地球惑星物理学</td>
 							<td></td>
+						</tr>
+						<tr>
+							<td><a href="camp_ad6.html">6</a></td>
+							<td>静岡(国立中央青少年交流の家)</td>
+							<td>-</td>
+							<td>(参加人数)</td>
+							<td>11,500</td>
+							<td>テーマ</td>
+							<td>開催報告</a></td>
 						</tr>
 
 					</tbody>
