--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 		</div>
 	<![endif]-->
 
+	<!-- ここの画像を29回ように変える！！　-->
 	<div id="slidr-id1" style="margin:0 0 10px 0;">
 		<center><a href="camp/camp_ad6.html"><img src="img/2025/camp_adv6/adv6th_pos.png" alt="" width="450px"></a></center>
 	</div>	
@@ -152,7 +153,7 @@
 
 
 	<h2>トピックス</h2>
-
+	<!-- ここの更新をする！　-->
 <iframe src="history.html" frameborder="1" width="604" height="300"></iframe>
 
 <br /></div>
@@ -160,7 +161,7 @@
 	<!-- サイドメニュー開始 -->
 
 	<div id="menu">
-
+		
 		<div id="sns">
 			<div id="shareme" data-url="http://physmathseminar.web.fc2.com/" data-text="数物セミナーは大学学部生を対象として、大学・学年・分野などの垣根を越えた交流を目指した「全国規模の」セミナーです。"></div>
 		</div>
